--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,5 +78,5 @@
         "valarray": "cpp",
         "variant": "cpp"
     },
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Enabled"
 }
