--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,8 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "ccomplex": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
